--- a/estilo/style.css
+++ b/estilo/style.css
@@ -95,7 +95,7 @@ header > p {
     padding-right: 10px;
     padding-left: 10px;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.61);
-    margin-bottom: 15 px;
+    padding-bottom: 50px;
 
 
 }
